fixed disappearing nav bar and scaling to desktop

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header id="home">
         <nav class="nav_absolute">
             <div class="nav_wrapper">
-                <ul class="nav_list clearfix">
+                <ul class="nav_list">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#skills">Skills</a></li>
@@ -52,7 +52,7 @@
                     <div class="about_text">
                         <p>Hi! I'm <span class="accent-font">Derek</span>, a web developer from Toronto, Ontario. After picking up coding as a hobby I fell deeply in love with solving intricate problems in the digital realm.</p>
                         <p>When I am not learning new code, I enjoy reading, trying new recipes and hanging out with friends. I am also the proud owner of a very outspoken chihuahua!</p>
-                        <button class="button button_cv"><a href="#">Download CV</a></button>
+                        <a target="_blank" href="http://derekluudevs.com/derekluu-resume.pdf"><button class="button button_cv">Download CV</button></a>
                     </div>
                 </div>
             </div>
@@ -108,8 +108,8 @@
                             <img src="assets/project6.PNG" alt="screenshot of lit tracker">
                         </div>
                         <div class="button-container">
-                            <a href="https://github.com/lit-tracker-project-6/lit-tracker"><button class="button">Repo</button></a>
-                            <a href="https://lit-tracker.firebaseapp.com/"><button class="button">Live</button></a>
+                            <a href="https://github.com/lit-tracker-project-6/lit-tracker" target="_blank"><button class="button">Github</button></a>
+                            <a href="https://lit-tracker.firebaseapp.com/" target="_blank"><button class="button">Live</button></a>
                         </div>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                 <div class="project2 project_container">
                     <div class="project_container_top project_textContainer fade__down" data-aos="fade-down">
                         <h3>ShouldIGetIt</h3>
-                        <p>Inspired by <a class="link" href="https://isthereanydeal.com/">isthereanydeal</a> this app allows users to quickly search a video game they're interested in to assist with their purchasing decisions.</p>
+                        <p>Inspired by <a class="link" href="https://isthereanydeal.com/" target="_blank">isthereanydeal</a> this app allows users to quickly search a video game they're interested in to assist with their purchasing decisions.</p>
                         <p>HTML<span>/</span>CSS<span>/</span>Responsive
                         Design<span>/</span>Javascript<span>/</span>React<span>/</span>Git</p>
                     </div>
@@ -126,8 +126,8 @@
                             <img src="assets/project5.PNG" alt="screenshot of shouldIGetIt">
                         </div>
                         <div class="button-container">
-                            <a href="https://github.com/dluudevs/derek-luu-project5"><button class="button">Repo</button></a>
-                            <a href="https://shouldigetit-3aad7.firebaseapp.com/"><button class="button">Live</button></a>
+                            <a href="https://github.com/dluudevs/derek-luu-project5" target="_blank"><button class="button">Github</button></a>
+                            <a href="https://shouldigetit-3aad7.firebaseapp.com/" target="_blank"><button class="button">Live</button></a>
                         </div>
                     </div>
                 </div>
@@ -144,8 +144,8 @@
                             <img src="assets/project2.PNG" alt="screenshot of beachstay">
                         </div>
                         <div class="button-container">
-                            <a href="https://github.com/dluudevs/derek-luu-project2"><button class="button">Repo</button></a>
-                            <a href="https://dluudevs.github.io/derek-luu-project2/"><button class="button">Live</button></a>
+                            <a href="https://github.com/dluudevs/derek-luu-project2" target="_blank"><button class="button">Github</button></a>
+                            <a href="https://dluudevs.github.io/derek-luu-project2/" target="_blank"><button class="button">Live</button></a>
                         </div>
                     </div>
                 </div>
@@ -156,7 +156,7 @@
         <section id="contact" class="contact">
             <div class="wrapper">
                 <h2>Contact</h2>
-                <form action="">
+                <form action="http://www.focuspocus.io/magic/derekluu90@gmail.com" method="POST">
                     <div class="form_top">
                         <label class="visuallyhidden" for="name">Name:</label>
                         <input required type="text" id="name" placeholder="Name" name="name">
