fixed bugs with nav bar, minor changes to html

--- a/index.html
+++ b/index.html
@@ -63,31 +63,31 @@
                 <h2>Skills</h2>
                 <ul class="skill_container">
                     <li class="skill_icon">
-                        <i class="icon devicon-html5-plain colored"></i>
+                        <i aria-label="HTML5 icon" class="icon devicon-html5-plain colored"></i>
                     </li>
                     <li class="skill_icon">
-                        <i class="icon devicon-css3-plain colored"></i>
+                        <i aria-label="CSS3 icon" class="icon devicon-css3-plain colored"></i>
                     </li>
                     <li class="skill_icon">
-                        <i class="icon devicon-sass-original colored"></i>
+                        <i aria-label="SASS icon" class="icon devicon-sass-original colored"></i>
                     </li>
                     <li class="skill_icon">
-                        <i class="icon devicon-javascript-plain colored"></i>
+                        <i aria-label="Javascript icon" class="icon devicon-javascript-plain colored"></i>
                     </li>
                     <li class="skill_icon">
-                        <i class="icon devicon-jquery-plain colored"></i>
+                        <i aria-label="Jquery icon" class="icon devicon-jquery-plain colored"></i>
                     </li>
                     <li class="skill_icon">
-                        <i class="icon devicon-react-original colored"></i>
+                        <i aria-label="React icon" class="icon devicon-react-original colored"></i>
                     </li>
                     <li class="skill_icon">
-                        <i class="icon devicon-git-plain colored"></i>
+                        <i aria-label="Github icon" class="icon devicon-github-plain colored"></i>
                     </li>
                     <li class="skill_icon">
-                        <i class="icon devicon-github-plain colored"></i>
+                        <i aria-label="Git icon" class="icon devicon-git-plain"></i>
                     </li>
                     <li class="skill_icon">
-                        <img class="firebase" src="assets/firebase.svg" alt="firebase logo">
+                        <img aria-label="Firebase icon" class="firebase" src="assets/firebase.svg" alt="firebase logo">
                     </li>
                 </ul>
             </div>
@@ -101,7 +101,7 @@
                     <div class="project_container_top project_textContainer fade__down"  data-aos="fade-down">
                         <h3>Lit Tracker</h3>
                         <p>Built with React, this app allows you to create your very own book list. Sort your books by ratings, mark them as read or look at other people's list for inspiration!</p>
-                        <p>HTML<span>/</span>CSS<span>/</span>Responsive Design<span>/</span>Javascript<span>/</span>React<span>/</span>Git<span>/</span>Firebase</p>
+                        <p>HTML<span>/</span>CSS<span>/</span>Responsive Design<span>/</span>Javascript<span>/</span>React<span>/</span>Firebase<span>/</span>Github</p>
                     </div>
                     <div class="project_container_bottom fade__up" data-aos="fade-up">
                         <div class="project_imgContainer">
@@ -119,7 +119,7 @@
                         <h3>ShouldIGetIt</h3>
                         <p>Inspired by <a class="link" href="https://isthereanydeal.com/" target="_blank">isthereanydeal</a> this app allows users to quickly search a video game they're interested in to assist with their purchasing decisions.</p>
                         <p>HTML<span>/</span>CSS<span>/</span>Responsive
-                        Design<span>/</span>Javascript<span>/</span>React<span>/</span>Git</p>
+                        Design<span>/</span>Javascript<span>/</span>React<span>/</span>Github</p>
                     </div>
                     <div class="project_container_bottom fade__up" data-aos="fade-up">
                         <div class="project_imgContainer">
