added additional check to mobile nav

--- a/index.html
+++ b/index.html
@@ -177,21 +177,21 @@
                             <div class="contact_container">
                                 <a href="https://www.linkedin.com/in/derekluu/" target="_blank">
                                     <div class="contact_link contact_linkedin">
-                                        <i class="fab fa-linkedin"></i>
+                                        <i aria-hidden="true" class="fab fa-linkedin"></i>
                                         <p>linkedin.com/derekluu</p>
                                     </div>
                                 </a>
 
                                 <a href="https://twitter.com/dluudevs" target="_blank">
                                     <div class="contact_link contact_twitter">
-                                        <i class="fab fa-twitter"></i>
+                                        <i aria-hidden="true" class="fab fa-twitter"></i>
                                         <p>twitter.com/dluudevs</p>
                                     </div>
                                 </a>
 
                                 <a href="https://github.com/dluudevs" target="_blank">
                                     <div class="contact_link contact_medium">
-                                        <i class="fab fa-github"></i>
+                                        <i aria-hidden="true" class="fab fa-github"></i>
                                         <p>github.com/dluudevs</p>
                                     </div>
                                 </a>
