updated skills section

--- a/index.html
+++ b/index.html
@@ -63,32 +63,77 @@
             <div class="wrapper">
                 <h2>Skills</h2>
                 <ul class="skill_container">
-                    <li class="skill_icon">
-                        <i aria-label="HTML5 icon" class="icon devicon-html5-plain colored"></i>
+                    <li class="skill_icon_container">
+                        <span class="skill_icon">
+                            <i aria-label="HTML5 icon" class="icon devicon-html5-plain colored"></i>
+                        </span>
+                        <span class="skill_text">HTML</span>
                     </li>
-                    <li class="skill_icon">
-                        <i aria-label="CSS3 icon" class="icon devicon-css3-plain colored"></i>
+                    <li class="skill_icon_container">
+                        <span class="skill_icon">
+                            <i aria-label="CSS3 icon" class="icon devicon-css3-plain colored"></i>
+                        </span>
+                        <span class="skill_text">CSS3</span>
                     </li>
-                    <li class="skill_icon">
-                        <i aria-label="SASS icon" class="icon devicon-sass-original colored"></i>
+                    <li class="skill_icon_container">
+                        <span class="skill_icon">
+                            <i aria-label="SASS icon" class="icon devicon-sass-original colored"></i>
+                        </span>
+                        <span class="skill_text">SASS</span>
                     </li>
-                    <li class="skill_icon">
-                        <i aria-label="Javascript icon" class="icon devicon-javascript-plain colored"></i>
+                    <li class="skill_icon_container">
+                        <span class="skill_icon">
+                            <i aria-label="Javascript icon" class="icon devicon-javascript-plain colored"></i>
+                        </span>
+                        <span class="skill_text">JavaScript</span>
                     </li>
-                    <li class="skill_icon">
-                        <i aria-label="Jquery icon" class="icon devicon-jquery-plain colored"></i>
+                    <li class="skill_icon_container">
+                        <span class="skill_icon">
+                            <i aria-label="Jquery icon" class="icon devicon-jquery-plain colored"></i>
+                        </span>
+                        <span class="skill_text">jQuery</span>
                     </li>
-                    <li class="skill_icon">
-                        <i aria-label="React icon" class="icon devicon-react-original colored"></i>
+                    <li class="skill_icon_container">
+                        <span class="skill_icon">
+                            <i aria-label="React icon" class="icon devicon-react-original colored"></i>
+                        </span>
+                        <span class="skill_text">React</span>
                     </li>
-                    <li class="skill_icon">
-                        <i aria-label="Github icon" class="icon devicon-github-plain colored"></i>
+                    <li class="skill_icon_container">
+                        <span class="skill_icon">
+                            <i class="icon devicon-github-plain-wordmark colored"></i>
+                        </span>
+                        <span class="skill_text">Github</span>
                     </li>
-                    <li class="skill_icon">
-                        <i aria-label="Git icon" class="icon devicon-git-plain"></i>
+                    <li class="skill_icon_container">
+                        <span class="skill_icon">
+                            <i aria-label="Git icon" class="icon devicon-git-plain"></i>
+                        </span>
+                        <span class="skill_text">Git</span>
                     </li>
-                    <li class="skill_icon">
-                        <img aria-label="Firebase icon" class="firebase" src="assets/firebase.svg" alt="firebase logo">
+                    <li class="skill_icon_container">
+                        <span class="skill_icon">
+                            <i class="icon fas fa-network-wired"></i>
+                        </span>
+                        <span class="skill_text">REST APIs</span>
+                    </li>
+                    <li class="skill_icon_container">
+                        <span class="skill_icon ">
+                            <i class="icon devicon-nodejs-plain colored"></i>
+                        </span>
+                        <span class="skill_text">NodeJs</span>
+                    </li>
+                    <li class="skill_icon_container">
+                        <span class="skill_icon">
+                            <i class="icon devicon-mongodb-plain colored"></i>
+                        </span>
+                        <span class="skill_text mongo">MongoDB</span>
+                    </li>
+                    <li class="skill_icon_container">
+                        <span class="skill_icon">
+                            <i class="icon devicon-express-original colored"></i>
+                        </span>
+                        <span class="skill_text">Express</span>
                     </li>
                 </ul>
             </div>
@@ -102,7 +147,7 @@
                     <div class="project_container_top project_textContainer fade__down"  data-aos="fade-down">
                         <h3>Lit Tracker</h3>
                         <p>A collaborative project built with React, this app allows you to create your very own book list. Sort your books by ratings, mark them as read or look at other people's list for inspiration!</p>
-                        <p>HTML<span>/</span>CSS<span>/</span>Responsive Design<span>/</span>Javascript<span>/</span>React<span>/</span>Firebase<span>/</span>Github</p>
+                        <p>HTML<span>/</span>CSS<span>/</span>Responsive Design<span>/</span>JavaScript<span>/</span>React<span>/</span>Firebase<span>/</span>Github</p>
                     </div>
                     <div class="project_container_bottom fade__up" data-aos="fade-up">
                         <div class="project_imgContainer">
@@ -122,7 +167,7 @@
 
                         <p>Made with React and utilizing Gamespot's RESTful API, this app allows users to quickly search a video game they're intrested in to assist with their purchasing decisions.</p>
                         <p>HTML<span>/</span>CSS<span>/</span>Responsive
-                        Design<span>/</span>Javascript<span>/</span>React<span>/</span>Github</p>
+                        Design<span>/</span>JavaScript<span>/</span>React<span>/</span>Github</p>
                     </div>
                     <div class="project_container_bottom fade__up" data-aos="fade-up">
                         <div class="project_imgContainer">
@@ -134,25 +179,7 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="project3 project_container">
-                    <div class="project_container_top project_textContainer fade__up" data-aos="fade-up">
-                        <h3>Beachstay</h3>
-                        <p>A reponsive multi-page PSD conversion, a desktop design was used as a reference. Mobile design was subject to one's interpretation of the overall design.</p>
-                        <p>HTML<span>/</span>CSS<span>/</span>Responsive
-                        Design<span>/</span>Jquery</p>
-                    </div>
-                    <div class="project_container_bottom fade__down" data-aos="fade-down">
-                        <div class="project_imgContainer">
-                            <img src="assets/project2.PNG" alt="screenshot of beachstay">
-                        </div>
-                        <div class="button-container">
-                            <a href="https://github.com/dluudevs/derek-luu-project2" target="_blank"><button class="button">Github</button></a>
-                            <a href="https://dluudevs.github.io/derek-luu-project2/" target="_blank"><button class="button">Live</button></a>
-                        </div>
-                    </div>
-                </div>
-
+                
             </div>
         </section>
 
