update portfolio section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="/styles/styles.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="html" href="thankyou.html">
 
@@ -145,9 +145,26 @@
 
                 <div class="project1 project_container">
                     <div class="project_container_top project_textContainer fade__down"  data-aos="fade-down">
+                        <h3>URL Shortener</h3>
+                        <p>A solo hobby project, this fullstack JavaScript app shortens your links for you!</p>
+                        <p>HTML<span>/</span>CSS<span>/</span>JavaScript<span>/</span>Node<span>/</span>Express<span>/</span>MongoDB<span>/</span>Github</p>
+                    </div>
+                    <div class="project_container_bottom fade__up" data-aos="fade-up">
+                        <div class="project_imgContainer">
+                            <img src="assets/url-shortener.JPG" alt="screenshot of URL shortener">
+                        </div>
+                        <div class="button-container">
+                            <a href="https://github.com/dluudevs/url-shortener" target="_blank"><button class="button">Github</button></a>
+                            <a href="https://dluu-shorturl.herokuapp.com/" target="_blank"><button class="button">Live</button></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project2 project_container">
+                    <div class="project_container_top project_textContainer fade__down"  data-aos="fade-down">
                         <h3>Lit Tracker</h3>
                         <p>A collaborative project built with React, this app allows you to create your very own book list. Sort your books by ratings, mark them as read or look at other people's list for inspiration!</p>
-                        <p>HTML<span>/</span>CSS<span>/</span>Responsive Design<span>/</span>JavaScript<span>/</span>React<span>/</span>Firebase<span>/</span>Github</p>
+                        <p>HTML<span>/</span>CSS<span>/</span>JavaScript<span>/</span>React<span>/</span>Firebase<span>/</span>Github</p>
                     </div>
                     <div class="project_container_bottom fade__up" data-aos="fade-up">
                         <div class="project_imgContainer">
@@ -160,14 +177,11 @@
                     </div>
                 </div>
 
-                <div class="project2 project_container">
+                <div class="project3 project_container">
                     <div class="project_container_top project_textContainer fade__down" data-aos="fade-down">
                         <h3>ShouldIGetIt</h3>
-                        <!-- <p>Inspired by <a class="link" href="https://isthereanydeal.com/" target="_blank">isthereanydeal</a>, this app was built with React and makes use of Gamespot's RESTful API. ShouldIGetIt allows users to quickly search a video game they're interested in to assist with their purchasing decisions.</p> -->
-
                         <p>Made with React and utilizing Gamespot's RESTful API, this app allows users to quickly search a video game they're intrested in to assist with their purchasing decisions.</p>
-                        <p>HTML<span>/</span>CSS<span>/</span>Responsive
-                        Design<span>/</span>JavaScript<span>/</span>React<span>/</span>Github</p>
+                        <p>HTML<span>/</span>CSS<span>/</span>JavaScript<span>/</span>React<span>/</span>Github</p>
                     </div>
                     <div class="project_container_bottom fade__up" data-aos="fade-up">
                         <div class="project_imgContainer">
@@ -179,7 +193,24 @@
                         </div>
                     </div>
                 </div>
-                
+
+                <div class="project4 project_container">
+                    <div class="project_container_top project_textContainer fade__up" data-aos="fade-up">
+                        <h3>Beachstay</h3>
+                        <p>A responsive multi-page PSD conversion, a desktop design was used as a reference. Mobile design was subject to one's interpretation of the overall design.</p>
+                        <p>HTML<span>/</span>CSS<span>/</span>Jquery</p>
+                    </div>
+                    <div class="project_container_bottom fade__down" data-aos="fade-down">
+                        <div class="project_imgContainer">
+                            <img src="assets/project2.PNG" alt="screenshot of beachstay">
+                        </div>
+                        <div class="button-container">
+                            <a href="https://github.com/dluudevs/derek-luu-project2" target="_blank"><button class="button">Github</button></a>
+                            <a href="https://dluudevs.github.io/derek-luu-project2/" target="_blank"><button class="button">Live</button></a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
 
